objects/CMS__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ad_Supported__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ad Supported</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nosey</fullName>
                </value>
                <value>
                    <fullName>County Road</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cue_Points__c</fullName>
        <label>Cue Points</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Subtype__c</fullName>
        <label>Data Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>collection</fullName>
                </value>
                <value>
                    <fullName>genre</fullName>
                </value>
                <value>
                    <fullName>curated</fullName>
                </value>
                <value>
                    <fullName>series</fullName>
                </value>
                <value>
                    <fullName>season</fullName>
                </value>
                <value>
                    <fullName>episode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>collection</fullName>
                </value>
                <value>
                    <fullName>asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <label>Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ends_at__c</fullName>
        <label>Ends_at</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Episode_Title__c</fullName>
        <formula>if(  ISPICKVAL(Data_Subtype__c, &quot;Episode&quot;),

text(Series__c )&amp;&quot; S&quot;&amp;if( LEN(Text(Season__c))=1,&quot;0&quot;&amp; Text(Season__c) ,TEXT(Season__c))&amp;&quot;E&quot;&amp;if(Len(text( Episode__c ))=1,&quot;0&quot;&amp;Text(Episode__c), text(Episode__c))

, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Episode Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Episode__c</fullName>
        <label>Episode</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoList__c</fullName>
        <label>GeoList</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Playlists__c</fullName>
        <label>Manual Playlists</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hero Carousel</fullName>
                </value>
                <value>
                    <fullName>Featured</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Talk</fullName>
                </value>
                <value>
                    <fullName>Dating</fullName>
                </value>
                <value>
                    <fullName>Movies</fullName>
                </value>
                <value>
                    <fullName>Specials</fullName>
                </value>
                <value>
                    <fullName>Jakes Picks</fullName>
                </value>
                <value>
                    <fullName>Main Navigation</fullName>
                </value>
                <value>
                    <fullName>Popular Shows</fullName>
                </value>
                <value>
                    <fullName>Our Favorites</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Poster_URL__c</fullName>
        <label>Poster URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published__c</fullName>
        <label>Published</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unpublished</fullName>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roku_Caption_File__c</fullName>
        <label>Roku Caption File</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ron Hazeltons Housecalls</fullName>
                </value>
                <value>
                    <fullName>Cheaters Amazing Confrontations</fullName>
                </value>
                <value>
                    <fullName>Paternity Court</fullName>
                </value>
                <value>
                    <fullName>Bill Cunningham Show</fullName>
                </value>
                <value>
                    <fullName>Texas Justice</fullName>
                </value>
                <value>
                    <fullName>Cristina&apos;s Court</fullName>
                </value>
                <value>
                    <fullName>LAPD</fullName>
                </value>
                <value>
                    <fullName>American Gladiators</fullName>
                </value>
                <value>
                    <fullName>Sex Wars MGM</fullName>
                </value>
                <value>
                    <fullName>Elimidate</fullName>
                </value>
                <value>
                    <fullName>Hero Carousel</fullName>
                </value>
                <value>
                    <fullName>Featured</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>Talk</fullName>
                </value>
                <value>
                    <fullName>Dating</fullName>
                </value>
                <value>
                    <fullName>Movies</fullName>
                </value>
                <value>
                    <fullName>Specials</fullName>
                </value>
                <value>
                    <fullName>Jakes Picks</fullName>
                </value>
                <value>
                    <fullName>Popular Shows</fullName>
                </value>
                <value>
                    <fullName>Our Favorites</fullName>
                </value>
                <value>
                    <fullName>MoviesComedy</fullName>
                </value>
                <value>
                    <fullName>MoviesDrama</fullName>
                </value>
                <value>
                    <fullName>MoviesAction</fullName>
                </value>
                <value>
                    <fullName>MoviesRomance</fullName>
                </value>
                <value>
                    <fullName>Latest Episodes</fullName>
                </value>
                <value>
                    <fullName>Comedy</fullName>
                </value>
                <value>
                    <fullName>Action</fullName>
                </value>
                <value>
                    <fullName>Drama</fullName>
                </value>
                <value>
                    <fullName>Romance</fullName>
                </value>
                <value>
                    <fullName>Court Show A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sharing_Tag__c</fullName>
        <label>Sharing Tag</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_URL__c</fullName>
        <label>Source URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starts_at__c</fullName>
        <label>Starts_at</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail_URL__c</fullName>
        <label>Thumbnail URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WebVTT_Captions_URL__c</fullName>
        <label>WebVTT Captions URL</label>
        <type>Url</type>
    </fields>
    <label>CMS</label>
    <listViews>
        <fullName>All_List_View</fullName>
        <columns>NAME</columns>
        <columns>Display_Name__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Series__c</columns>
        <columns>Source_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>notContain</operation>
            <value>Ron Hazeltons Housecalls,Cheaters Amazing Confrontations,Hero Carousel,Featur</value>
        </filters>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>equals</operation>
        </filters>
        <label>Justin P - List View</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cheaters</fullName>
        <columns>Application__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Description__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <columns>Active__c</columns>
        <columns>WebVTT_Captions_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>contains</operation>
            <value>Cheaters</value>
        </filters>
        <label>Series - Cheaters</label>
    </listViews>
    <listViews>
        <fullName>Collections</fullName>
        <columns>Application__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Subtype__c</field>
            <operation>equals</operation>
            <value>collection,genre,curated,series,season</value>
        </filters>
        <label>Collections</label>
    </listViews>
    <listViews>
        <fullName>Featured</fullName>
        <columns>Application__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Active__c</columns>
        <columns>GeoList__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>includes</operation>
            <value>Featured</value>
        </filters>
        <label>Featured</label>
    </listViews>
    <listViews>
        <fullName>Hero_Carousel</fullName>
        <columns>Application__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <columns>Active__c</columns>
        <columns>GeoList__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>includes</operation>
            <value>Hero Carousel</value>
        </filters>
        <label>Hero Carousel</label>
    </listViews>
    <listViews>
        <fullName>Main_Navigation</fullName>
        <columns>Application__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Active__c</columns>
        <columns>GeoList__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>includes</operation>
            <value>Main Navigation</value>
        </filters>
        <label>Main Navigation</label>
    </listViews>
    <listViews>
        <fullName>Our_Favorites</fullName>
        <columns>Application__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Active__c</columns>
        <columns>GeoList__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>includes</operation>
            <value>Our Favorites</value>
        </filters>
        <label>Our Favorites</label>
    </listViews>
    <listViews>
        <fullName>Popular_Shows</fullName>
        <columns>Application__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <columns>Active__c</columns>
        <columns>GeoList__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manual_Playlists__c</field>
            <operation>includes</operation>
            <value>Popular Shows</value>
        </filters>
        <label>Popular Shows</label>
    </listViews>
    <listViews>
        <fullName>Ron_Hazelton</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>WebVTT_Captions_URL__c</columns>
        <columns>Active__c</columns>
        <columns>GeoList__c</columns>
        <columns>Ad_Supported__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>equals</operation>
            <value>Ron Hazeltons Housecalls</value>
        </filters>
        <label>Series - Ron Hazelton</label>
    </listViews>
    <listViews>
        <fullName>Seasons</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Season__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <columns>Active__c</columns>
        <columns>GeoList__c</columns>
        <columns>Ad_Supported__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Subtype__c</field>
            <operation>equals</operation>
            <value>season</value>
        </filters>
        <label>Seasons</label>
    </listViews>
    <listViews>
        <fullName>Series</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Manual_Playlists__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Season__c</columns>
        <columns>Display_Name__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <columns>Active__c</columns>
        <columns>GeoList__c</columns>
        <columns>Ad_Supported__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_Subtype__c</field>
            <operation>equals</operation>
            <value>series</value>
        </filters>
        <label>Series</label>
    </listViews>
    <listViews>
        <fullName>Series_American_Gladiators</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Description__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <columns>WebVTT_Captions_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>contains</operation>
            <value>American Gladiators</value>
        </filters>
        <label>Series - American Gladiators</label>
    </listViews>
    <listViews>
        <fullName>Series_Bill_Cunningham_Show</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Description__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <columns>WebVTT_Captions_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>contains</operation>
            <value>Bill Cunningham Show</value>
        </filters>
        <label>Series - Bill Cunningham Show</label>
    </listViews>
    <listViews>
        <fullName>Series_Cristinas_Court</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <columns>WebVTT_Captions_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>contains</operation>
            <value>Cristina&apos;s Court</value>
        </filters>
        <label>Series - Cristinas Court</label>
    </listViews>
    <listViews>
        <fullName>Series_Dating_Shows_B_C</fullName>
        <columns>Active__c</columns>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Data_Type__c</columns>
        <columns>Data_Subtype__c</columns>
        <columns>Description__c</columns>
        <columns>Season__c</columns>
        <columns>Episode__c</columns>
        <columns>Episode_Title__c</columns>
        <columns>Source_URL__c</columns>
        <columns>Thumbnail_URL__c</columns>
        <columns>WebVTT_Captions_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Series__c</field>
            <operation>contains</operation>
            <value>Dating Show B,Dating Show C</value>
        </filters>
        <label>Series  - Dating Shows B &amp; C</label>
    </listViews>
    <nameField>
        <displayFormat>RID{000000}</displayFormat>
        <label>RefID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>